objects/RocketDocs__RD20_Connection_Setting__c.object
<CustomObject>
    <description>Custom Object storing connection details for communication with RocketDocs API.</description>
    <fields>
        <fullName>RocketDocs__API_Endpoint__c</fullName>
        <description>API Endpoint used for communication between SalesForce and RocketDocs</description>
        <label>API Endpoint</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RocketDocs__API_Token__c</fullName>
        <description>Token used to authenticate into RocketDocs API</description>
        <inlineHelpText>Ex: Bearer 12345abcd</inlineHelpText>
        <label>API Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use these values when connecting to RocketDocs</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RocketDocs__External_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>External System Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RocketDocs__RapidDocs_Endpoint__c</fullName>
        <description>API Endpoint used for the button that sends you to RapidDocs</description>
        <label>RapidDocs Endpoint</label>
        <type>TextArea</type>
    </fields>
    <label>RD20 Connection Setting</label>
    <listViews>
        <fullName>RocketDocs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RD20 Connection Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD20 Connection Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>